# sserv-web-socket

./: .gitignore  CMakeLists.txt  JSON_parser.c  Makefile  README.md  cmake_install.cmake  compile.sh  json_parser.cpp  new_betta.cpp
tt/: CMakeCache.txt  Makefile  cmake_install.cmake
